tests/snapshots/cli__render_bare_several_notes_needs_a_selector_under_n.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: rendering needs a selector in non-interactive mode (2 notes)
