tests/snapshots/cli__render_engine_pandoc_still_renders.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "--engine"
    - pandoc
    - "-n"
  env:
    EDITOR: "true"
    PATH: stub-bin
---
success: true
exit_code: 0
----- stdout -----
Rendering [DATE....]  Wanted  ([ULID....................])...
Rendered wanted.pdf (pdf via pandoc, 9 B)

----- stderr -----
