tests/snapshots/cli__render_help_pins_the_flag_surface.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - "--help"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Render a note to a document artifact.

`--to` selects the output format: `pdf` (the default) or `typst`, the emitted Typst document. `pdf` is produced by ntropy's own typst engine, which compiles the note with the external `typst` binary, so only `typst` need be on `PATH`. The `typst` format needs no external tool.

The look comes from the vault's `[render] theme` in `.ntropy/config.toml`, a Typst file in `.ntropy/themes/`; `--theme` overrides it for one invocation.

Usage: ntropy render [OPTIONS] [ID|QUERY]...

Arguments:
  [ID|QUERY]...
          A full ULID or a query DSL expression (joined from trailing arguments; omitted = choose from all notes)

Options:
      --to <FORMAT>
          The output format: `pdf` (default) or `typst`
          
          [default: pdf]

      --vault <PATH>
          Operate on the vault at this path (overrides all other resolution)

      --engine <NAME>
          Override the format's default engine

  -n, --non-interactive
          Force non-interactive (plain) behavior even on a TTY

  -o, --output <PATH>
          Write the artifact here instead of `./<slug>.<ext>`

      --strict
          Treat malformed/badly-named notes as errors instead of warnings

  -i, --identity <PATH>
          Use this age identity file instead of the OS credential store.
          
          `$NTROPY_IDENTITY` is consulted when the flag is absent.

      --theme <NAME>
          Render with this theme instead of the vault's configured one.
          
          Names a file in `<vault>/.ntropy/themes/<NAME>.typ`. `default` selects ntropy's built-in look, overriding a configured theme.

  -p, --print
          Print the artifact's path to stdout on success

      --passphrase-file <PATH>
          Read the vault passphrase from the first line of this file.
          
          Supplies the passphrase wherever one would otherwise be typed: creating an encrypted vault, unlocking one, or converting one. On `vault passphrase` it is the *current* passphrase.

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
