tests/snapshots/cli__render_missing_pandoc_reports_unavailable.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-n"
  env:
    EDITOR: "true"
    PATH: no-such-bin
---
success: false
exit_code: 1
----- stdout -----
Rendering [DATE....]  Wanted  ([ULID....................])...

----- stderr -----
error: while rendering the note: required tool `pandoc` is not available: install pandoc; it must be on PATH
