tests/snapshots/cli__render_no_match_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - "tag:nonexistent"
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: no note matches `tag:nonexistent`
