tests/snapshots/cli__render_output_flag_is_honored.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-o"
    - custom.pdf
    - "-p"
    - "-n"
  env:
    EDITOR: "true"
    PATH: stub-bin
---
success: true
exit_code: 0
----- stdout -----
custom.pdf

----- stderr -----
