tests/snapshots/cli__render_print_emits_the_artifact_path.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-p"
    - "-n"
  env:
    EDITOR: "true"
    PATH: stub-bin
---
success: true
exit_code: 0
----- stdout -----
wanted.pdf

----- stderr -----
