tests/snapshots/cli__render_typst_html_lenient.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "--to"
    - typst
    - "-p"
    - "-n"
  env:
    EDITOR: "true"
    PATH: no-such-bin
---
success: true
exit_code: 0
----- stdout -----
wanted.typ

----- stderr -----
warning: dropped raw HTML: <div>
warning: dropped raw HTML: </div>
